--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
+    "element-resize-detector": "^1.1.15",
     "element-ui": "^2.4.11",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
